# kry

./: .gitignore  Cargo.toml  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mocharealm/kry/android/: MainActivity.kt
android/app/src/main/java/com/mocharealm/kry/android/ui/theme/: KryTheme.kt
android/app/src/main/res/drawable/: ic_backspace_24px.xml  ic_clipboard_24px.xml  ic_gesture_24px.xml  ic_gif_24px.xml  ic_grid_view_24px.xml  ic_keyboard_return_24px.xml  ic_keyboard_tab_24px.xml  ic_menu_book_24px.xml  ic_mic_24px.xml  ic_mood_24px.xml  ic_palette_24px.xml  ic_preview_24px.xml  ic_shift_24px.xml  ic_space_bar_24px.xml  ic_spellcheck_24px.xml  ic_sticker_24px.xml  ic_swipe_24px.xml  ic_text_edit_24px.xml  ic_translate_24px.xml  ic_tune_24px.xml  ic_vibration_24px.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/main/res/xml/: method.xml
android/emojipicker/: README.md  build.gradle.kts
android/emojipicker/src/main/res/drawable/: ic_emoji_activity_24px.xml  ic_emoji_backspace_24px.xml  ic_emoji_emotions_24px.xml  ic_emoji_flags_24px.xml  ic_emoji_food_24px.xml  ic_emoji_objects_24px.xml  ic_emoji_people_24px.xml  ic_emoji_symbols_24px.xml  ic_emoji_travel_24px.xml
android/emojipicker/src/main/res/values/: strings.xml
android/emojipicker/src/main/res/values-zh/: strings.xml
android/gradle/: libs.versions.toml
crates/android-ffi/: Cargo.toml
crates/android-ffi/src/: lib.rs
crates/context-core/: Cargo.toml
crates/context-core/src/: lib.rs
crates/data-core/: Cargo.toml
crates/data-core/examples/: build_en_lexicon.rs  compile_binary_assets.rs  convert_lexicon_v2.rs  validate_arch_artifacts.rs
crates/data-core/src/: artifacts.rs  binary_io.rs  lexicon.rs  lib.rs
crates/decoder-beam/: Cargo.toml
crates/decoder-beam/src/: boundary.rs  lib.rs  merge.rs  sentence.rs
crates/decoder-core/: Cargo.toml
crates/decoder-core/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/examples/: benchmark_input_latency.rs  decode_from_pack.rs  diag_en_swipe.rs  diag_swipe_path.rs  diag_zh_multi.rs  diagnose_zh_swipe.rs  validate_gesture_decode.rs  validate_gesture_decode_zh.rs  validate_lm_context.rs
crates/engine-core/src/: constructors.rs  gesture.rs  lib.rs  moe.rs  observation_model.rs  session.rs  stream.rs  tests.rs
crates/geometry-core/: Cargo.toml
crates/geometry-core/src/: lib.rs
crates/geometry-phone-10col/: Cargo.toml
crates/geometry-phone-10col/src/: lib.rs
crates/keymap-core/: Cargo.toml
crates/keymap-core/src/: lib.rs
crates/keymap-latin-qwerty/: Cargo.toml
crates/keymap-latin-qwerty/src/: lib.rs
crates/keymap-latin-spanish/: Cargo.toml
crates/keymap-latin-spanish/src/: lib.rs
crates/keymap-ru-jcuken/: Cargo.toml
crates/keymap-ru-jcuken/src/: lib.rs
crates/lm-core/: Cargo.toml
crates/lm-core/examples/: probe_lm.rs  train_lm.rs
crates/lm-core/src/: lib.rs  model.rs  tokenizer.rs
crates/observation-core/: Cargo.toml
crates/observation-core/src/: lib.rs
crates/personal-core/: Cargo.toml
crates/personal-core/src/: lib.rs
crates/preview-egui/: Cargo.toml
crates/preview-egui/src/: app.rs  config.rs  decoder.rs  keyboard.rs  main.rs
crates/profile-core/: Cargo.toml
crates/profile-core/src/: lib.rs
crates/schema-core/: Cargo.toml
crates/schema-core/src/: lib.rs
crates/schema-emoji/: Cargo.toml
crates/schema-emoji/src/: lib.rs
crates/schema-en-word/: Cargo.toml
crates/schema-en-word/src/: lib.rs  prefix.rs
crates/schema-es-word/: Cargo.toml
crates/schema-es-word/src/: lib.rs
crates/schema-ru-cyrillic/: Cargo.toml
crates/schema-ru-cyrillic/src/: lib.rs
crates/schema-ru-translit/: Cargo.toml
crates/schema-ru-translit/src/: lib.rs
crates/schema-zh-hans-pinyin-full/: Cargo.toml
crates/schema-zh-hans-pinyin-full/src/: abbrev.rs  lib.rs  syllable_trie.rs
datasets/: README.md
datasets/corpus/en/: README.md
datasets/corpus/zh/: README.md
tools/: README.md  train_language_packs.py
tools/data/: en-frequency.tsv
tools/data_prep/: README.md  build_en_frequency_list.py  download_corpus.py  download_wikitext_context.py  fetch_zh_corpus.sh
tools/training/: README.md  lm_sweep.sh  train_lm.py  train_tokenizer.py
(+23 files in other folders)
